{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Combat",
            "id": "dc89fa7a-7f97-41ef-befa-c355828c0751",
            "actions": [
                {
                    "name": "LeftMouseClick",
                    "type": "Button",
                    "id": "3d671b02-a368-472e-83ee-ff8847348fea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseClick",
                    "type": "Button",
                    "id": "589a0cac-50bd-4def-a1e5-859137e62864",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability0",
                    "type": "Button",
                    "id": "2e4b776e-405f-4980-b6ea-6f9bdffbc9a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "81fe5bbb-1103-4c70-9a5b-a26a60fd7144",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "3eb921b3-eba8-437c-83ad-8de6dc39bbd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability3",
                    "type": "Button",
                    "id": "7c6b1733-abde-40b7-b228-6e1c48096464",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability4",
                    "type": "Button",
                    "id": "39329354-0392-43d0-814b-014376257abc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability5",
                    "type": "Button",
                    "id": "c87f833c-263d-422a-a907-6c5e1d55c0c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability6",
                    "type": "Button",
                    "id": "3aadadbd-6f6a-4947-848c-9959daa5729f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b58e1ae-a4e9-42d9-a232-209b1aded87f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35fe3f4d-5420-4b55-ac25-111478ea5d48",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "585f0dd6-7668-4ebe-92b0-90f94f2940cf",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "803c91c2-8e92-4a1c-8bf8-f464730a5e38",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcfbc9ef-6179-4621-9678-9d2014ac447c",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5a79fc6-7dbe-44cb-bd7b-6506090418f3",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48bb11c0-52e6-46e6-a72f-dfd5d831e192",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fca66d39-9754-4369-b13c-dfe72bf50999",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3db94d75-a52c-4499-a4f6-578a0addc4db",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability6",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}